navbar: hamburger menu not collapsing fixed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -316,3 +316,15 @@ footer a:hover {
   transform: translateY(-50%);
   width: 90%;
 }
+
+@media only screen and (max-width: 767px) {
+  #twitter-nav{
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+
+  #docs #twitter-nav{
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
